Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9315

warning message "QHttpNetworkConnectionChannel::_q_receiveReply() called without QHttpNetworkReply"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.0.0
    • 4.7.1
    • Network
    • None
    • d1a5bb55d9e14105b69d6a17bb63c2f2ecafccf6

      I am getting the following warning message "QHttpNetworkConnectionChannel::_q_receiveReply() called without QHttpNetworkReply, 0 bytes on socket." I have attached a sample file which reproduces the warning.

      In the sample I was able to get the warning randomly if I used on the QNetworkAccessManager or QWebView. Using them both together appears to produce the warning every time.

      My application has it's own threaded web server built on QTcpServer. When serving web pages from the server, I get this warning multiple times, but the pages display properly.

        1. backtrace.txt
          6 kB
        2. main.cpp
          2 kB
        3. qnam_test.zip
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            xcm Martin Petersson (Inactive)
            jhollingsworth Jason Hollingsworth
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes