QHttpNetworkConnectionChannel: Warn if bytesAvailable and no reply

If there are no bytesAvailable and no reply then the channel
can be closed without any need for this warning.

Task-number: QTBUG-9315
Change-Id: Ifbb1f4732d3173a7807ac5bd0dc78fb5144faaf3
Reviewed-by: Markus Goetz <markus@woboq.com>
Reviewed-by: Shane Kearns <shane.kearns@accenture.com>

cregit: d1a5bb55d9e14105b69d6a17bb63c2f2ecafccf6 https://github.com/qt/qtbase/commit/d1a5bb55d9e14105b69d6a17bb63c2f2ecafccf6